[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-puzzle-tools"
version = "0.1.0"
description = "Utilities for coding puzzle competitions (Advent of Code, Everybody Codes, etc.)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Scott Halgrim"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shalgrim/coding-puzzle-tools"
"Bug Tracker" = "https://github.com/shalgrim/coding-puzzle-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_puzzle_tools*"]